feat: TNL-10899 Revert to swagger 2.0
Trying to get past build errors

--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -3,7 +3,7 @@
 #  are part of your Open edX installation's "public API".
 
 ---
-openapi: "3.0"
+swagger: "2.0"
 info:
   version: "1.0.0"
   title: "Open edX"
