--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -138,17 +138,68 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  # CMS API (Studio ingestion)
-  "/cms/v1/file_assets/{proxy+}":
-    $ref: "./cms.yaml#/endpoints/file_assets/{proxy+}"
-  "/cms/v1/videos/uploads/{proxy+}":
-    $ref: "./cms.yaml#/endpoints/videos/uploads/{proxy+}"
-  "/cms/v1/videos/images/{proxy+}":
-    $ref: "./cms.yaml#/endpoints/videos/images/{proxy+}"
-  "/cms/v1/video_transcripts/{proxy+}":
-    $ref: "./cms.yaml#/endpoints/video_transcripts/{proxy+}"
-  "/cms/v1/xblock/{proxy+}":
-    $ref: "./cms.yaml#/endpoints/xblock/{proxy+}"
+  # CMS API (content ingestion)
+  "cms/v0/file_assets/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.cms_host}/api/contentstore/v1/file_assets/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "cms/v0/videos/uploads/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.cms_host}/api/contentstore/v1/videos/uploads/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "cms/videos/images/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.cms_host}/api/contentstore/v1/videos/images/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "cms/video_transcripts/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.cms_host}/api/contentstore/v1/video_transcripts/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+  "cms/xblock/{proxy+}":
+    x-amazon-apigateway-any-method:
+      parameters:
+      - name: "proxy"
+        in: "path"
+      x-amazon-apigateway-integration:
+        type: "http_proxy"
+        uri: "https://${stageVariables.cms_host}/api/contentstore/v1/xblock/{proxy}"
+        httpMethod: "ANY"
+        requestParameters:
+          integration.request.path.proxy: "method.request.path.proxy"
+
+
 
 # edX extension point. Lists the vendors in use and their specific
 #  parameters that are expected by upstream refs.
