feat: add leading slash to endpoint description

--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -139,7 +139,7 @@ paths:
           integration.request.path.proxy: "method.request.path.proxy"
 
   # CMS API (content ingestion)
-  "cms/v1/file_assets/{proxy+}":
+  "/cms/v1/file_assets/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
