--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -139,7 +139,7 @@ paths:
           integration.request.path.proxy: "method.request.path.proxy"
 
   # CMS API (content ingestion)
-  "cms/v0/file_assets/{proxy+}":
+  "/cms/v0/file_assets/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
@@ -151,7 +151,7 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  "cms/v0/videos/uploads/{proxy+}":
+  "/cms/v0/videos/uploads/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
@@ -163,7 +163,7 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  "cms/videos/images/{proxy+}":
+  "/cms/videos/images/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
@@ -175,7 +175,7 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  "cms/video_transcripts/{proxy+}":
+  "/cms/video_transcripts/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
@@ -187,7 +187,7 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  "cms/xblock/{proxy+}":
+  "/cms/xblock/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
       - name: "proxy"
