feat: TNL-10746 cms -> authoring cleanup
Top-level comment marks section for authoring domain, with ingestion as a sample API belonging to the domain

deploy_studio.py not needed with authoring API part of the omnibus API

--- a/swagger/api.yaml
+++ b/swagger/api.yaml
@@ -138,7 +138,7 @@ paths:
         requestParameters:
           integration.request.path.proxy: "method.request.path.proxy"
 
-  # CMS API (content ingestion)
+  # Authoring Domain API (e.g. content ingestion via CMS)
   "/authoring/v0/file_assets/{proxy+}":
     x-amazon-apigateway-any-method:
       parameters:
