--- a/tests/test_all.yaml
+++ b/tests/test_all.yaml
@@ -4,3 +4,4 @@
 - import: 'tests/test_oauth.yaml'
 - import: 'tests/test_catalog.yaml'
 - import: 'tests/test_enterprise.yaml'
+- import: 'tests/test_enterprise_access.yaml'
