--- a/tests/test_enterprise_access.yaml
+++ b/tests/test_enterprise_access.yaml
@@ -4,7 +4,7 @@
 
 - test:
     - name: 'Assignment configuration cancel endpoint returns HTTP 200'
-    - url: '/enterprise-access/v1/assignment-configurations/9101d3de36156cba/admin/assignments/cancel/'
+    - url: '/enterprise/v1/assignment-configurations/9101d3de36156cba/admin/assignments/cancel/'
     - method: 'POST'
     - headers: { 'Authorization': 'aeiou', 'Content-Type': 'application/json' }
     - body: >
@@ -17,6 +17,26 @@
 
 - test:
     - name: 'GET rejected without authorization'
-    - url: '/enterprise-access/v1/assignment-configurations/0123456789abcdefg/admin/assignments/cancel/'
+    - url: '/enterprise/v1/assignment-configurations/0123456789abcdefg/admin/assignments/cancel/'
     - method: 'POST'
     - expected_status: [400]
+
+- test:
+    - name: 'Assignment configuration remind endpoint returns HTTP 200'
+    - url: '/enterprise/v1/assignment-configurations/9101d3de36156cba/admin/assignments/remind/'
+    - method: 'POST'
+    - headers: { 'Authorization': 'aeiou', 'Content-Type': 'application/json' }
+    - body: >
+          [
+              {
+                  "assignment_uuids": ["01234567-89ab-cdef-0123-456789abcdef", "abcdef01-2345-6789-abcd-ef0123456789"]
+              }
+          ]
+    - expected_status: [200]
+
+- test:
+    - name: 'GET rejected without authorization'
+    - url: '/enterprise/v1/assignment-configurations/0123456789abcdefg/admin/assignments/remind/'
+    - method: 'POST'
+    - expected_status: [400]
+
