--- a/tests/test_enterprise_access.yaml
+++ b/tests/test_enterprise_access.yaml
@@ -24,6 +24,19 @@
     - expected_status: [400]
 
 - test:
+    - name: 'Assignment configuration list endpoint returns HTTP 200'
+    - url: '/enterprise/v1/assignment-configurations/9101d3de36156cba/admin/assignments/'
+    - method: 'GET'
+    - headers: { 'Authorization': 'aeiou', 'Content-Type': 'application/json' }
+    - expected_status: [200]
+
+- test:
+    - name: 'Assignment configuration list request rejected without authorization'
+    - url: '/enterprise/v1/assignment-configurations/0123456789abcdefg/admin/assignments/'
+    - method: 'GET'
+    - expected_status: [400]
+
+- test:
     - name: 'Assignment configuration cancel endpoint returns HTTP 200'
     - url: '/enterprise/v1/assignment-configurations/9101d3de36156cba/admin/assignments/cancel/'
     - method: 'POST'
