--- a/.github/workflows/upgrade-python-requirements.yml
+++ b/.github/workflows/upgrade-python-requirements.yml
@@ -55,10 +55,9 @@ jobs:
           --target-branch="${{ env.target_branch }}" --base-branch-name="upgrade-python-requirements" \
           --commit-message="chore: Updating Python Requirements" --pr-title="Python Requirements Update" \
           --pr-body="Python requirements update.Please review the [changelogs](https://openedx.atlassian.net/wiki/spaces/TE/pages/1001521320/Python+Package+Changelogs) for the upgraded packages." \
-          --user-reviewers="" --team-reviewers="arbi-bom" --delete-old-pull-requests
+          --user-reviewers="" --team-reviewers="orbi-bom" --delete-old-pull-requests
 
-      - name: Send failure notification
-        if: ${{ failure() }}
+      - name: Send notification
         uses: dawidd6/action-send-mail@v4
         with:
           server_address: email-smtp.us-east-1.amazonaws.com
@@ -66,6 +65,6 @@ jobs:
           username: ${{secrets.EDX_SMTP_USERNAME}}
           password: ${{secrets.EDX_SMTP_PASSWORD}}
           subject: Upgrade python requirements workflow failed in ${{github.repository}}
-          to: arbi-bom@edx.org
+          to: orbi-bom-upgrade-prs@2u-internal.jsmalerts.atlassian.net
           from: github-actions <github-actions@edx.org>
           body: Upgrade python requirements workflow in ${{github.repository}} failed! For details see "github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
