--- a/.github/workflows/upgrade-python-requirements.yml
+++ b/.github/workflows/upgrade-python-requirements.yml
@@ -76,9 +76,9 @@ jobs:
         with:
           server_address: email-smtp.us-east-1.amazonaws.com
           server_port: 465
-          username: ${{secrets.edx_smtp_username}}
-          password: ${{secrets.edx_smtp_password}}
+          username: ${{secrets.EDX_SMTP_USERNAME}}
+          password: ${{secrets.EDX_SMTP_PASSWORD}}
           subject: Upgrade python requirements workflow executed successfully in ${{github.repository}}
           to: 'orbi-bom-upgrade-prs@2u-internal.jsmalerts.atlassian.net'
           from: github-actions <github-actions@edx.org>
-          body: Upgrade python requirements workflow executed in ${{ github.repository }}. For details see "github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+          body: Upgrade python requirements workflow successfully executed in ${{ github.repository }}. For details see "github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
